--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.0.1",
+    "@ant-design/pro-components": "^2.7.19",
+    "antd": "^5.21.3",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
