--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "prettier.requireConfig": true,
     "workbench.settings.useSplitJSON": true,
-    "JSON-zain.json.autorefresh": true
+    "JSON-zain.json.autorefresh": true,
+    "CodeGPT.apiKey": "CodeGPT Plus Beta"
 }
