--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,71 +1,108 @@
 {
-  // 编辑器设置
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.formatOnSave": true,
-  "editor.formatOnPaste": true,
-  "editor.formatOnType": false,
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": "explicit",
-    "source.fixAll.stylelint": "explicit",
-    "source.organizeImports": "explicit"
-  },
+    // 全局包管理器
+    "npm.packageManager": "pnpm",
 
-  // 文件类型格式化器
-  "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[javascriptreact]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[typescript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[typescriptreact]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[json]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[jsonc]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[css]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[scss]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[html]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[markdown]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
+    // 文件识别
+    "files.associations": {
+        "*.css": "postcss",
+        "*.md": "markdown",
+        "*.mdx": "mdx"
+    },
 
-  // ESLint 设置
-  "eslint.enable": true,
-  "eslint.validate": [
-    "javascript",
-    "javascriptreact",
-    "typescript",
-    "typescriptreact"
-  ],
+    // 保存时自动格式化
+    "editor.formatOnSave": true,
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": "explicit",
+        "source.fixAll.stylelint": "explicit",
+        "source.fixAll.markdownlint": "explicit",
+        "source.organizeImports": "explicit"
+    },
 
-  // Stylelint 设置
-  "stylelint.enable": true,
-  "stylelint.validate": ["css", "scss", "sass"],
+    // TS和React
+    "typescript.suggest.enabled": true,
+    "javascript.suggest.enabled": true,
+    "javascript.preferences.importModuleSpecifier": "project-relative",
+    "typescript.validate.enable": true,
+    "typescript.suggest.jsdoc.generateReturns": false,
+    "[prisma]": {
+        "editor.defaultFormatter": "Prisma.prisma",
+        "editor.formatOnSave": true
+    },
+    "[typescriptreact]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
+        "editor.formatOnSave": true
+    },
+    "[javascriptreact]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
+        "editor.formatOnSave": true
+    },
+    "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
+        "editor.formatOnSave": true
+    },
+    "[typescript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
+        "editor.formatOnSave": true
+    },
 
-  // TypeScript 设置
-  "typescript.preferences.importModuleSpecifier": "relative",
-  "typescript.suggest.autoImports": true,
-  "typescript.updateImportsOnFileMove.enabled": "always",
+    // 静态文件格式化
+    "[html]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[yaml]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[jsonc]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[json]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[mdx]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[markdown]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
 
-  // 其他设置
-  "files.eol": "\n",
-  "files.insertFinalNewline": true,
-  "files.trimTrailingWhitespace": true,
-  "emmet.includeLanguages": {
-    "javascript": "javascriptreact",
-    "typescript": "typescriptreact"
-  }
+    // CSS
+    "[css]": {
+        "editor.defaultFormatter": "stylelint.vscode-stylelint",
+        "editor.formatOnSave": true
+    },
+    "less.validate": false,
+    "scss.validate": false,
+    "postcss.validate": false,
+    "emmet.includeLanguages": {
+        "postcss": "css"
+    },
+    "tailwindCSS.validate": false,
+    "stylelint.enable": true,
+    "stylelint.packageManager": "pnpm",
+    "stylelint.snippet": ["css", "scss", "less", "postcss"],
+    "stylelint.validate": ["css", "scss", "less", "postcss"],
+
+    // Copilot提示与vscode代码提示的冲突解决
+    // 确保默认补全提供程序都启用
+    "editor.inlineSuggest.enabled": true, // 启用内联建议(Copilot)
+    "editor.suggestSelection": "first", // 默认选择第一个建议
+    "editor.quickSuggestions": {
+        // 启用快速建议
+        "other": true,
+        "comments": false,
+        "strings": true
+    },
+    "github.copilot.enable": {
+        "*": true,
+        "plaintext": false,
+        "markdown": false,
+        "scminput": false
+    },
+    "yaml.maxItemsComputed": 50000
 }
