--- a/package.json
+++ b/package.json
@@ -1,62 +1,65 @@
 {
-  "name": "my-next-app",
-  "type": "module",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint . --fix",
-    "lint:check": "eslint .",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "stylelint": "stylelint \"**/*.{css,scss,sass}\" --fix",
-    "stylelint:check": "stylelint \"**/*.{css,scss,sass}\"",
-    "check-all": "pnpm run lint:check && pnpm run format:check && pnpm run stylelint:check",
-    "fix-all": "pnpm run lint && pnpm run format && pnpm run stylelint"
-  },
-  "dependencies": {
-    "clsx": "^2.1.1",
-    "lodash": "^4.17.21",
-    "next": "15.3.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
-  "devDependencies": {
-    "@antfu/eslint-config": "^4.13.3",
-    "@eslint-react/eslint-plugin": "^1.51.1",
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/lodash": "^4.17.17",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.3",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-format": "^1.0.1",
-    "eslint-plugin-perfectionist": "^4.14.0",
-    "eslint-plugin-prettier": "^5.4.1",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "eslint-plugin-tailwindcss": "^3.18.0",
-    "eslint-plugin-unused-imports": "^4.1.4",
-    "postcss": "^8.5.4",
-    "postcss-import": "^16.1.0",
-    "postcss-mixins": "^11.0.3",
-    "postcss-nested": "^7.0.2",
-    "postcss-nesting": "^13.0.1",
-    "prettier": "^3.5.3",
-    "rimraf": "^6.0.1",
-    "stylelint": "^16.20.0",
-    "stylelint-config-css-modules": "^4.4.0",
-    "stylelint-config-recess-order": "^6.0.0",
-    "stylelint-config-standard": "^38.0.0",
-    "stylelint-prettier": "^5.0.3",
-    "tailwindcss": "^4",
-    "typescript": "^5"
-  }
+    "name": "nextapp",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "rimraf -rf .next && next dev --turbopack",
+        "build": "rimraf -rf .next && next build",
+        "start": "next start",
+        "------------------ lint command": "----",
+        "lint": "pnpm lint:es && pnpm lint:style",
+        "lint:es": "next lint --fix",
+        "lint:style": "stylelint \"**/*.css\" --fix --cache --cache-location node_modules/.cache/stylelint/",
+        "------------------ ui command": "----",
+        "addsc": "pnpm dlx shadcn@latest add"
+    },
+    "dependencies": {
+        "@ant-design/cssinjs": "^1.22.1",
+        "@ant-design/nextjs-registry": "^1.0.2",
+        "@radix-ui/react-slot": "^1.1.1",
+        "antd": "^5.22.7",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lodash": "^4.17.21",
+        "lucide-react": "^0.469.0",
+        "next": "15.1.3",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "tailwind-merge": "^2.6.0",
+        "tailwindcss-animate": "^1.0.7"
+    },
+    "devDependencies": {
+        "@antfu/eslint-config": "^3.12.1",
+        "@eslint-react/eslint-plugin": "^1.22.1",
+        "@eslint/eslintrc": "^3.2.0",
+        "@types/lodash": "^4.17.13",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "autoprefixer": "^10.4.20",
+        "eslint": "^9.17.0",
+        "eslint-config-next": "15.1.3",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-perfectionist": "^4.4.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "eslint-plugin-react": "^7.37.3",
+        "eslint-plugin-react-hooks": "^5.1.0",
+        "eslint-plugin-react-refresh": "^0.4.16",
+        "eslint-plugin-tailwindcss": "^3.17.5",
+        "eslint-plugin-unused-imports": "^4.1.4",
+        "postcss": "^8.4.49",
+        "postcss-import": "^16.1.0",
+        "postcss-mixins": "^11.0.3",
+        "postcss-nested": "^7.0.2",
+        "postcss-nesting": "^13.0.1",
+        "prettier": "^3.4.2",
+        "rimraf": "^6.0.1",
+        "stylelint": "^16.12.0",
+        "stylelint-config-css-modules": "^4.4.0",
+        "stylelint-config-recess-order": "^5.1.1",
+        "stylelint-config-standard": "^36.0.1",
+        "stylelint-prettier": "^5.0.2",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
+    }
 }
